[tool.poetry]
name = "k8scheck"
version = "0.1.0"
description = ""
authors = ["tom <tom@rozekrans.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
prompt-toolkit = "^3.0.43"
kr8s = "^0.12.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

